--- a/static/css/query-builder.advanced.css
+++ b/static/css/query-builder.advanced.css
@@ -79,6 +79,7 @@ input {
     box-shadow: 0 1px 3px 0 rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 2px 1px -1px rgba(0,0,0,.12);
     text-align: left;
     position: relative;
+    display: inline-block;
 }
 
 .query-builder .rules-list .input-field .select-wrapper {
