remove bottom border from filter container

--- a/static/css/query-builder.advanced.css
+++ b/static/css/query-builder.advanced.css
@@ -104,8 +104,14 @@ input {
     font-weight: normal;
 }
 
-.query-builder .rules-list .rule-filter-container .input-field .select-wrapper input.select-dropdown:focus {
-    border-bottom: 1px solid #e1f5fe;
+.query-builder .rules-list .rule-filter-container .input-field .select-wrapper input.select-dropdown {
+    border-bottom: 0px;
+    margin: 0;
+    line-height: 100%;
+}
+
+.query-builder .rules-list .rule-filter-container .input-field .select-wrapper .caret {
+    display: none;
 }
 
 .query-builder .rules-list .rule-operator-container .input-field .select-wrapper input.select-dropdown:focus {
