--- a/static/css/select2-materialize.css
+++ b/static/css/select2-materialize.css
@@ -652,6 +652,7 @@
 .select2-container--default .select2-search--inline .select2-search__field {
     height: 30px;
     width: auto !important;
+    padding-left: 25px;
 }
 
 .select2-container--default .select2-selection--multiple input {
